chore: add Vivian Health Plugin
